[package]
name = "grid"
version = "0.1.0"
authors = ["Chevy Ray Johnston <happytrash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#math = { git = "https://github.com/ChevyRay/math", branch = "main" }
math = { path = "../math" }