[package]
name = "grid"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = { version = "0.18.0", optional = true }
euclid = { version = "0.22.11", optional = true }
glam = { version = "0.29.2", optional = true }
mint = { version = "0.5.9", optional = true }
serde = { version = "1.0.216", features = ["derive"], optional = true }
vek = { version = "0.17.1", optional = true }

[features]
glam = ["dep:glam"]
serde = ["dep:serde"]
mint = ["dep:mint"]
cgmath = ["dep:cgmath"]
euclid = ["dep:euclid"]
vek = ["dep:vek"]
